--- a/proyectos.html
+++ b/proyectos.html
@@ -1,63 +1,57 @@
-document.addEventListener('DOMContentLoaded', () => {
-  const loginForm = document.getElementById('loginForm');
-  const registerForm = document.getElementById('registerForm');
+Perfecto. Aquí tienes el HTML completo del **panel del administrador (`dashboard.html`)** totalmente funcional con el JavaScript que compartiste (`admin_dashboard.js`).
 
-  // LOGIN
-  if (loginForm) {
-    loginForm.addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const email = document.getElementById('email').value.trim();
-      const password = document.getElementById('password').value.trim();
+---
 
-      const res = await fetch(`http://localhost:3000/users?email=${email}&password=${password}`);
-      const users = await res.json();
+## ✅ `dashboard.html` (Administrador)
 
-      if (users.length === 0) {
-        alert("Correo o contraseña incorrectos.");
-        return;
-      }
+```html
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Panel de Administrador</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
 
-      const user = users[0];
-      localStorage.setItem("user", JSON.stringify(user));
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Admin Eventos</a>
+      <div class="d-flex">
+        <button id="logoutBtn" class="btn btn-outline-light">Cerrar sesión</button>
+      </div>
+    </div>
+  </nav>
 
-      // Redirigir según rol
-      if (user.role === "admin") {
-        window.location.href = "dashboard.html";
-      } else if (user.role === "visitor") {
-        window.location.href = "visitor_dashboard.html";
-      } else {
-        alert("Rol desconocido.");
-      }
-    });
-  }
+  <!-- Contenido principal -->
+  <div class="container mt-5">
+    <h2 class="mb-4">Gestión de Eventos</h2>
 
-  // REGISTRO
-  if (registerForm) {
-    registerForm.addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const name = document.getElementById('name').value.trim();
-      const email = document.getElementById('email').value.trim();
-      const password = document.getElementById('password').value.trim();
-      const role = document.getElementById('role').value;
+    <!-- Botón para crear evento -->
+    <div class="text-end mb-3">
+      <button class="btn btn-success">Crear Evento</button>
+    </div>
 
-      const res = await fetch(`http://localhost:3000/users?email=${email}`);
-      const existingUsers = await res.json();
+    <!-- Tabla de eventos -->
+    <table class="table table-bordered table-striped">
+      <thead class="table-dark">
+        <tr>
+          <th>#</th>
+          <th>Imagen</th>
+          <th>Título</th>
+          <th>Fecha</th>
+          <th>Cupo</th>
+          <th>Acciones</th>
+        </tr>
+      </thead>
+      <tbody id="eventTableBody">
+        <!-- Contenido generado dinámicamente -->
+      </tbody>
+    </table>
+  </div>
 
-      if (existingUsers.length > 0) {
-        alert("Este correo ya está registrado.");
-        return;
-      }
-
-      const newUser = { name, email, password, role };
-
-      await fetch("http://localhost:3000/users", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify(newUser)
-      });
-
-      alert("Registro exitoso. Ahora puedes iniciar sesión.");
-      window.location.href = "login.html";
-    });
-  }
-});
+  <!-- Script -->
+  <script src="js/admin_dashboard.js"></script>
+</body>
+</html>
